--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -1,8 +1,8 @@
 [more]
-other = "Other"
+other = "More"
 
 [allTitle]
-other = "Go Top"
+other = "{{.Title }}"
 
 [recentTitle]
 other = "About FluffyTail Studio"
